<resources>
    <string name="app_name">Guía Zelda</string>
    <string name="title_activity_map">Map</string>
    <string name="loading">Cargando...</string>


    <string name="native_ad">ca-app-pub-1019247544085882/9439043659</string>
    <string name="interstetial_personajes">ca-app-pub-1019247544085882/9020241255</string>
    <string name="interstetial_mapa">ca-app-pub-1019247544085882/3479908459</string>
    <string name="interstetial_recetas">ca-app-pub-1019247544085882/4956641656</string>


    <!--Contact Form-->

    <string name="contact_form">Contacta con nosotros</string>
    <string name="contact_form_name">Tu nombre</string>
    <string name="contact_form_email">Tu email</string>
    <string name="contact_form_subject">Subject</string>
    <string name="contact_form_message">Mensaje</string>
    <string name="contact_form_button">Enviar mensaje</string>
    <string name="contact_form_post_message">Espere un momento. Estamos enviando el mensaje al departamento de atencion al usuario...</string>
    <string name="contact_posted">Tu mensaje ha sido correctamente enviado.</string>

    <!--Personajes-->
    <string name="texto_link">Protagonista de la historia al que controlaremos durante la aventura. Se trata de un joven guerrero que lleva durmiendo durante 100 años hasta que un día es despertado por una extraña voz femenina, empezando el periplo por conocer su pasado, así como por salvar a Hyrule de la amenaza de Ganon.</string>
    <string name="texto_zelda">Princesa del Reino de Hyrule quien es muy cercana a Link. A lo largo de la rebelión sufrida por el ataque de Ganon vemos que es una de las que más se esfuerza por salvar al Reino.</string>
    <string name="texto_ganon">Villano de la historia que ha inundado de maldad a todo el Reino durante los últimos 100 años. Su simple presencia ya pone en peligro a todo el reino, siendo el deber de Link deternerlo.</string>
    <string name="texto_daruk">Valiente Goron quien controla a la bestia divina Vah Rudania.</string>
    <string name="texto_revali">Orni oado y confiado quien controla a la bestia divina Vah Medoh.</string>
    <string name="texto_mipha">Princesa de los Zora quien controla a Vah Ruta.</string>
    <string name="texto_urbosa">Miembro de la tribu Gerudo, quien controla a la bestia divina Vah Naboris.</string>

    <!--Titulos-->
    <string name="texto_noticias">Noticias</string>
    <string name="texto_mapas">Mapas</string>
    <string name="texto_crafteo">Recetas</string>
    <string name="texto_personajes">Personajes</string>
    <string name="texto_feedback">Feedback</string>

    <!--Titulos-->
    <string name="back_question">¿Quieres salir?</string>
    <string name="back_si">Si</string>
    <string name="back_no">NO!</string>

    <string name="olinguito">Olinguito</string>
    <string name="menu">Menu</string>
    <string name="subtitle">Bassaricyon neblina</string>
    <string name="option1">Option 1</string>
    <string name="option2">Option 2</string>
    <string name="option3">Option 3</string>
    <string name="details">Details</string>
    <string name="info">The olinguito is distinct from the other species within the genus, popularly known as "olingos", and also from the kinkajou (kinkajous resemble olingos, but are not closely related). Its average weight is 900 grams (2 lb), making it the smallest procyonid. The animal is an omnivorous frugivore that eats mainly fruits (such as figs), but also insects and nectar; this diet results in feces the size of small blueberries.</string>

    <string name="bt_enviar">Enviar</string>

    <string name="facebook_app_id">1868851513358556</string>

    <string name="error_google_sign_in">Error</string>

    <string name="twitter_consumer_key" translatable="false">7HXH1AzwgM29WQsjGi2R2xxSn</string>
    <string name="twitter_consumer_secret" translatable="false">TLSdKYHZDoknSwulWzHVcHawyCgHTThDDOAMFNXXltH1uKxdmS</string>

    <string name="set_title_login">Introduce nombre de usuario:</string>
    <string name="bt_salir">Desconectar</string>
    <string name="SIGN_IN_LAYOUT">Inicia Sesión</string>
    <string name="responsable">Haz un uso responsable de este chat</string>
    <string name="msg_enviado">Mensaje enviado</string>


    <string name="next">Siguiente</string>
    <string name="skip">Saltar</string>
    <string name="start">Empezar</string>
    <string name="title_slide1">Menu</string>
    <string name="desc_slide1">En el menú superior dispones de varios apartados como feedback, chat, recetas... solo haciendo un scroll</string>
    <string name="title_slide2">Mapa</string>
    <string name="desc_slide2">Dispones de un mapa donde poder encontrar todo</string>
    <string name="title_slide3">Chat</string>
    <string name="desc_slide3">Chat disponible para poder intercambiar información con otros jugadores</string>


</resources>
