<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.elgeekman.alejandrorodriguezuson.zeldabreathofthewild.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="393dp"
        android:layout_height="56dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        tools:layout_editor_absoluteY="-2dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <HorizontalScrollView
        android:layout_width="374dp"
        android:layout_height="51dp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="7dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/Noticias"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_noticias"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="5dp" />


            <Button
                android:id="@+id/Mapa"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp"
                android:text="@string/texto_mapas"
                app:layout_constraintLeft_toRightOf="@+id/Personajes"
                tools:layout_editor_absoluteY="5dp" />
            <Button
                android:id="@+id/chat"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp"
                android:text="chat"
                app:layout_constraintLeft_toRightOf="@+id/Personajes"
                tools:layout_editor_absoluteY="5dp" />


            <Button
                android:id="@+id/Crafteo"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp"
                android:text="@string/texto_crafteo"
                app:layout_constraintLeft_toRightOf="@+id/Mapa"
                tools:layout_editor_absoluteY="5dp" />
            <Button
                android:id="@+id/Personajes"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp"
                android:text="@string/texto_personajes"
                app:layout_constraintLeft_toRightOf="@+id/Personajes"
                tools:layout_editor_absoluteY="5dp" />
            <Button
                android:id="@+id/Feedback"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp"
                android:text="@string/texto_feedback"
                app:layout_constraintLeft_toRightOf="@+id/Crafteo"
                tools:layout_editor_absoluteY="5dp" />
        </LinearLayout>
    </HorizontalScrollView>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:fillViewport="false"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/link_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Link"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_above="@+id/textView2"
                android:layout_alignRight="@+id/textView2"
                android:layout_alignEnd="@+id/textView2" />

            <TextView
                android:id="@+id/link_dec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text= "@string/texto_link"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />


            <TextView
                android:id="@+id/Zelda_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Zelda"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_above="@+id/textView2"
                android:layout_alignRight="@+id/textView2"
                android:layout_alignEnd="@+id/textView2" />

            <TextView
                android:id="@+id/zelda_dec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_zelda"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />


            <TextView
                android:id="@+id/Ganon_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ganon"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_above="@+id/textView2"
                android:layout_alignRight="@+id/textView2"
                android:layout_alignEnd="@+id/textView2" />

            <TextView
                android:id="@+id/Ganon_dec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_ganon"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />


            <TextView
                android:id="@+id/Daruk_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Daruk"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_above="@+id/textView2"
                android:layout_alignRight="@+id/textView2"
                android:layout_alignEnd="@+id/textView2" />

            <TextView
                android:id="@+id/Daruk_dec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_daruk"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />


            <TextView
                android:id="@+id/Revali_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Revali"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_above="@+id/textView2"
                android:layout_alignRight="@+id/textView2"
                android:layout_alignEnd="@+id/textView2" />

            <TextView
                android:id="@+id/Revali_dec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_revali"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />
            <com.google.android.gms.ads.NativeExpressAdView
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                ads:adSize="320x300"
                ads:adUnitId="@string/native_ad">
            </com.google.android.gms.ads.NativeExpressAdView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/Mipha_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Mipha"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_above="@+id/textView2"
                android:layout_alignRight="@+id/textView2"
                android:layout_alignEnd="@+id/textView2" />

            <TextView
                android:id="@+id/Mipha_dec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_mipha"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />


            <TextView
                android:id="@+id/Urbosa_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Urbosa"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_above="@+id/textView2"
                android:layout_alignRight="@+id/textView2"
                android:layout_alignEnd="@+id/textView2" />

            <TextView
                android:id="@+id/Urbosa_dec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_urbosa"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />


        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>
