<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.elgeekman.alejandrorodriguezuson.zeldabreathofthewild.noticias">

    <WebView
        android:id="@+id/wvMain1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="70dp" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="393dp"
        android:layout_height="56dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        tools:layout_editor_absoluteY="-2dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <HorizontalScrollView
        android:layout_width="374dp"
        android:layout_height="51dp"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="7dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/Noticias_noticias"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texto_noticias"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="5dp" />


            <Button
                android:id="@+id/Mapa_noticias"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp"
                android:text="@string/texto_mapas"
                app:layout_constraintLeft_toRightOf="@+id/Personajes"
                tools:layout_editor_absoluteY="5dp" />
            <Button
                android:id="@+id/chat_noticias"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp"
                android:text="chat"
                app:layout_constraintLeft_toRightOf="@+id/Personajes"
                tools:layout_editor_absoluteY="5dp" />


            <Button
                android:id="@+id/Crafteo_noticias"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp"
                android:text="@string/texto_crafteo"
                app:layout_constraintLeft_toRightOf="@+id/Mapa"
                tools:layout_editor_absoluteY="5dp" />
            <Button
                android:id="@+id/Personajes_noticias"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp"
                android:text="@string/texto_personajes"
                app:layout_constraintLeft_toRightOf="@+id/Personajes"
                tools:layout_editor_absoluteY="5dp" />
            <Button
                android:id="@+id/Feedback_noticias"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp"
                android:text="@string/texto_feedback"
                app:layout_constraintLeft_toRightOf="@+id/Crafteo"
                tools:layout_editor_absoluteY="5dp" />
        </LinearLayout>
    </HorizontalScrollView>




</android.support.constraint.ConstraintLayout>